--- a/budweiser.html
+++ b/budweiser.html
@@ -11,9 +11,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-     <title>Dum3bi- Personal website of Dumebi Iwuchukwu Micheal</title>
-     <meta name="description" content="Dumebi Iwuchukwu is an Art Director, Brand Strategist and Developer based in Lagos, Nigeria. He is the Art Manager and Resident Instructor (Art direction) at Oxygen Academy Lagos, The foremost school of brand communications in Nigeria.">
-     <meta name="theme-color" content="#f91e15"/>
+     <title>Budweiser | Dumebi Iwuchukwu</title>
+     <meta name="description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
+     <meta name="theme-color" content="#9849b1"/>
 
    <link rel="canonical" href="https://www.dum3bi.com/">
    <meta property="og:site_name" content="Dumebi Iwuchukwu">
@@ -24,18 +24,18 @@
 
    <meta property="og:url" content="https://www.dum3bi.com/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Dum3bi- Personal website of Dumebi Iwuchukwu Micheal.">
-   <meta property="og:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
-   <meta property="og:image" content="https://www.dum3bi.com/images/logo.svg">
+   <meta property="og:title" content="Dumebi Iwuchukwu | Product Designer.">
+   <meta property="og:description" content="I help businesses scale and make money by designing brands, products and experiences at the intersection of culture, design and technology.">
+   <meta property="og:image" content="https://www.dum3bi.com/images/logo-black.png">
    <meta property="og:image:alt" content="Dumebi's logo">
    <meta name="twitter:card" content="summary_large_image">
    <meta name="twitter:title" content="Dumebi Iwuchukwu">
-   <meta name="twitter:description" content="Dumebi is an Art Director, Brand Strategist and Developer based in Lagos in Nigeria, building brands at the speed of culture.">
-   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo.svg">
+   <meta name="twitter:description" content="Working at the intersection of digital product design, advertising and brand identity, Dumebi has the privilege of creating enabling experiences for people.">
+   <meta name="twitter:image" content="https://www.dum3bi.com/images/logo-black.png">
 
    <meta property="og:type" content="website">
 
-   <meta name="keywords" content="Dumebi Iwuchukwu,Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, Creative, Lagos, Ozubulu,  Nigeria">
+   <meta name="keywords" content="Dumebi Iwuchukwu, Dumebi Nnadirinwa Iwuchukwu, Chukwudumebi Iwuchukwu, Chukwudumebi Iwuchukwu Micheal, Art Manager, Art Director, Brand Strategist, Developer, Strategy, Digital Marketing Strategy, Email marketing, Online Advertising, UI/UX, UX/UI, design, HCI, Usability, Value proposition design, design thinking, Creative, Lagos, Ozubulu,  Nigeria, Experience design">
      <meta name="author" content="Dumebi Iwuchukwu">
 
     <!-- mobile specific metas
@@ -68,7 +68,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo-black.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -76,8 +76,8 @@
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="index.html#about" title="about">About</a></li>
                 <li><a href="index.html#works" title="works">Works</a></li>
-                <li class="current"><a href="blog.html" title="blog">Blog</a></li>
-                <li><a href="index.html#contact" title="contact">Contact</a></li>
+                <li class="current"><a href="scrapbook.html" title="blog">Scrapbook</a></li>
+                <li><a href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
 
@@ -90,27 +90,14 @@
 
         <!-- page header/blog hero
         ================================================== -->
-        <div class="page-header page-header--single page-hero" style="background-image:url(images/blog/blog-bg-02.jpg)">
+        <div class="page-header page-header--single page-hero"  style="background-image:url(images/blog/budweiser-bg.jpg)">
 
             <div class="row page-header__content narrow">
                 <article class="col-full">
-                    <div class="page-header__info">
-                        <div class="page-header__cat">
-                            <a href="#0">Branding</a><a href="#0">Design</a>
-                        </div>
-                    </div>
+
                     <h1 class="page-header__title">
-                        <a href="#0" title="">
-                            Using Patterns in your Branding.
-                        </a>
+                            Budweiser
                     </h1>
-                    <ul class="page-header__meta">
-                        <li class="date">September 16, 2017</li>
-                        <li class="author">
-                            By
-                            <span>Jonathan Doe</span>
-                        </li>
-                    </ul>
 
                 </article>
             </div>
@@ -173,82 +160,72 @@ code {
 
                 <p>Odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue laboris in sit minim cupidatat ut dolor voluptate enim veniam consequat occaecat fugiat in adipisicing in amet Ut nulla nisi non ut enim aliqua laborum mollit quis nostrud sed sed.</p>
 
-                <p class="blog-content__tags">
-                    <span>Post Tags</span>
 
-                    <span class="blog-content__tag-list">
-                        <a href="#0">orci</a>
-                        <a href="#0">lectus</a>
-                        <a href="#0">varius</a>
-                        <a href="#0">turpis</a>
-                    </span>
 
-                </p>
-
-                <div class="blog-content__pagenav">
-                    <div class="blog-content__nav">
-                        <div class="blog-content__prev">
-                            <a href="#0" rel="prev">
-                                <span>Previous Post</span>
-                                Tips on Minimalist Design
-                            </a>
-                        </div>
-                        <div class="blog-content__next">
-                            <a href="#0" rel="next">
-                                <span>Next Post</span>
-                                Less Is More
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="blog-content__all">
-                        <a href="blog.html" class="btn btn--primary">
-                            View All Posts
-                        </a>
-                    </div>
-                </div>
 
             </div><!-- end blog-content__main -->
         </div> <!-- end blog-content -->
 
     </article>
 
+    <section id="contact" class="s-contact target-section">
+
+        <div class="overlay"></div>
+
+        <div class="row narrow section-intro">
+            <div class="col-full">
+                <h3>Let's work together</h3>
+                <h1>Contact me.</h1>
+
+                <p>I like to listen.</p>
+            </div>
+        </div>
+        <div class="row contact__main">
+            <div class="col-eight tab-full contact__form">
+              <h4 class="h06">Email</h4>
+              <p><a href="mailto:me@dum3bi.com">me@dum3bi.com</a></p>
+            </div>
+            <div class="col-four tab-full contact__infos">
+              <h4 class="h06">Phone</h4>
+              <p><a href="tel:234 9065 71 2102">234-9065-71-2102</a></p>
+            </div>
+
+        </div>
+
+
+    </section> <!-- end s-contact -->
 
     <!-- footer
     ================================================== -->
     <footer>
-            <div class="row">
-                <div class="col-full">
+      <div class="row">
+          <div class="col-full">
 
-                    <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
-                    </div>
+              <div class="footer-logo">
+                  <a class="footer-site-logo" href="#top"><img src="images\logo-black.png" alt="Homepage"></a>
+              </div>
 
-                    <ul class="footer-social">
-                    <li><a href="https://www.facebook.com/iwuchukwu.dumebi" target="_blank" rel="noopener">
-                        <i class="im im-facebook" aria-hidden="true"></i>
-                        <span>Facebook</span>
-                    </a></li>
-                    <li><a href="https://twitter.com/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-twitter" aria-hidden="true"></i>
-                        <span>Twitter</span>
-                    </a></li>
-                    <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
-                        <i class="im im-instagram" aria-hidden="true"></i>
-                        <span>Instagram</span>
-                    </a></li>
-                    <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
-                        <i class="im im-behance" aria-hidden="true"></i>
-                        <span>Behance</span>
-                    </a></li>
-                    <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
-                        <i class="im im-linkedin" aria-hidden="true"></i>
-                        <span>Linkedin</span>
-                    </a></li>
-                    </ul>
+              <ul class="footer-social">
+                <li><a href="https://linkedin.com/in/chukwudumebi" target="_blank" rel="noopener">
+                    <i class="im im-linkedin" aria-hidden="true"></i>
+                    <span>Linkedin</span>
+                </a></li>
+                <li><a href="https://www.behance.net/dum3bi" target="_blank" rel="noopener">
+                    <i class="im im-behance" aria-hidden="true"></i>
+                    <span>Behance</span>
+                </a></li>
+                  <li><a href="https://github.com/dum3bi" target="_blank" rel="noopener">
+                      <i class="im im-github" aria-hidden="true"></i>
+                      <span>Github</span>
+                  </a></li>
+                  <li><a href="https://instagram.com/dum3bi/" target="_blank" rel="noopener">
+                      <i class="im im-instagram" aria-hidden="true"></i>
+                      <span>Instagram</span>
+                  </a></li>
+              </ul>
 
-                </div>
-            </div>
+          </div>
+      </div>
 
             <div class="row footer-bottom">
 
