--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#portfolio" title="works">Works</a></li>
+                <li><a href="scrapbook.html" target="_blank" title="works">Scrapbook</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -105,7 +106,8 @@
 
 
               <h1>
-                Hi👋🏼, I'm Dumebi.
+                Hi👋🏼, I'm Dumebi, <br>
+                I design beautiful brands, products & experiences.
               </h1>
 
              <div class="home-content__buttons">
@@ -237,7 +239,40 @@
               </div>
            </div> <!-- /folio-item -->
 
+           <div class="bgrid folio-item">
+                <div class="item-wrap">
+                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
+                   <a href="#modal-01" class="overlay">
+                      <div class="folio-item-table">
+                       <div class="folio-item-cell">
+                        <h3 class="folio-title">Skatedeck Challenge</h3>
+                        <span class="folio-types">
+                           Brand Identity and Marketing Design
+                        </span>
+                    </div>
+                      </div>
+                   </a>
+                </div>
+             </div> <!-- /folio-item -->
 
+
+
+
+             <div class="bgrid folio-item">
+                <div class="item-wrap">
+                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad">
+                   <a href="#modal-03" class="overlay">
+                      <div class="folio-item-table">
+                       <div class="folio-item-cell">
+                         <h3 class="folio-title">Schweppes</h3>
+                       <span class="folio-types">
+                           Art Direction & Marketing Design
+                       </span>
+                    </div>
+                      </div>
+                   </a>
+                </div>
+             </div> <!-- /folio-item -->
 
           <div class="bgrid folio-item">
                <div class="item-wrap">
@@ -331,7 +366,7 @@
            </div>
 
              <div class="link-box">
-                <a href="#" class="popup-modal-dismiss">Details</a>
+                <a href="budweiser.html">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
