change project description

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                        <div class="folio-item-cell">
                         <h3 class="folio-title">Skatedeck Challenge</h3>
                         <span class="folio-types">
-                           Brand Identity and Marketing Design
+                           Art direction and Graphic design
                         </span>
                     </div>
                       </div>
