--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
            </div>
 
              <div class="link-box">
-                <a href="budweiser.html">Details</a>
+                <a href="#">Details</a>
               <a href="#" class="popup-modal-dismiss">Close</a>
              </div>
 
