Update to about me

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 <div class="col-six tab-full right">
 
             <div>
-              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient care and diagnosis.</h3>
+              <h3>Dumebi's passion for experience design can be traced back to his formal training as a medical radiographer, where he spent significant time working on patient diagnosis and care.</h3>
 
-               <p>As a designer, he specializes in art direction, brand identity, and user experience design.</p>
+               <p>As a designer, he specializes in art direction, brand identity, and product design.</p>
 
-                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes,  Sterling Bank, Isobar, Wema Bank and more.</p>
+                <p>He's had the privilege of creating enabling experiences for people with brands like Budweiser, Nivea, Sprite, Schweppes, Sterling Bank, Haptics, Globacom and more.</p>
             </div>
 
 </div>
