Update on scrapbook

--- a/scrapbook.html
+++ b/scrapbook.html
@@ -115,119 +115,13 @@
             </div>
         </div>
         <div class="row portfolio-content">
+          <div class="masonry">
+            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
+            <div class="item"><iframe src="https://doc-00-3o-adspreview.googleusercontent.com/preview/9o5bees06oeguhr10neq55qcti27eh7n/ik5ip5o8qhb9poej3abe4shgmj4lkatq/1592568000000/92588319/previewuser/gwd.92588319?render=blank&creativeId=gwd.92588319&irsk=CICAgKDP9Z_uywE" width="300px" height="250px"></iframe><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
+            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
+            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
+          </div>
 
-    <div class="col-twelve">
-
-      <!-- portfolio-wrapper -->
-         <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap">
-                 
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">Budweiser</h3>
-                     <span class="folio-types">
-                         Brand & Marketing Design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-              <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay">
-
-                    <div class="folio-item-table">
-                     <div class="folio-item-cell">
-                       <h3 class="folio-title">NIVEA MEN</h3>
-                     <span class="folio-types">
-                       Social media design
-                     </span>
-                  </div>
-                    </div>
-                 </a>
-              </div>
-           </div> <!-- /folio-item -->
-
-           <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Skatedeck_challenge.jpg" alt="dentiti baseball cap" class="lazyload">
-
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                        <h3 class="folio-title">Skatedeck Challenge</h3>
-                        <span class="folio-types">
-                           Brand Identity and Marketing Design
-                        </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
-
-
-
-
-             <div class="bgrid folio-item">
-                <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad">
-
-                      <div class="folio-item-table">
-                       <div class="folio-item-cell">
-                         <h3 class="folio-title">Schweppes</h3>
-                       <span class="folio-types">
-                           Art Direction & Marketing Design
-                       </span>
-                    </div>
-                      </div>
-                   </a>
-                </div>
-             </div> <!-- /folio-item -->
-
-          <div class="bgrid folio-item">
-               <div class="item-wrap">
-                <img src="images\portfolio\gallery\cap-front.jpg" alt="dentiti baseball cap" class="lazyload">
-
-                     <div class="folio-item-table">
-                      <div class="folio-item-cell">
-                       <h3 class="folio-title">D3ntiti</h3>
-                       <span class="folio-types">
-                          Brand Identity and Marketing Design
-                       </span>
-                   </div>
-                     </div>
-                  </a>
-               </div>
-            </div> <!-- /folio-item -->
-
-
-
-
-            <div class="bgrid folio-item">
-               <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad">
-
-                     <div class="folio-item-table">
-                      <div class="folio-item-cell">
-                        <h3 class="folio-title">Dangote Flour</h3>
-                      <span class="folio-types">
-                          Art Direction
-                      </span>
-                   </div>
-                     </div>
-                  </a>
-               </div>
-            </div> <!-- /folio-item -->
-
-
-
-         </div> <!-- /portfolio-wrapper -->
-
-    </div>  <!-- /twelve -->
 
   </div> <!-- /portfolio-content -->
 
