--- a/scrapbook.html
+++ b/scrapbook.html
@@ -116,11 +116,52 @@
         </div>
         <div class="row portfolio-content">
           <div class="masonry">
-            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
-            <div class="item"><iframe src="https://doc-00-3o-adspreview.googleusercontent.com/preview/9o5bees06oeguhr10neq55qcti27eh7n/ik5ip5o8qhb9poej3abe4shgmj4lkatq/1592568000000/92588319/previewuser/gwd.92588319?render=blank&creativeId=gwd.92588319&irsk=CICAgKDP9Z_uywE" width="300px" height="250px"></iframe><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
-            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
-            <div class="item"><img src="images/portfolio/gallery/cap-front.jpg" alt="D3ntiti Cap"><p style="text-align:center; color:white;">Cap concept design for a clothing brand</p></div>
+          <div class="grid-container">
+
+            <div class="card">
+              <img class='grid-item grid-item-1' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/dangote-flour-knead-image-independence-day-nigeria.jpg' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-2' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/Skatedeck_challenge.jpg' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-3' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1510771463146-e89e6e86560e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"I love you so much!"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-4' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Self_portrait.jpg' alt=''>
+              <p>"I'm the baby of the house!"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-5' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1530281700549-e82e7bf110d6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"Are you gunna throw the ball?"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-6' src='https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"C'mon friend!"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-7' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1552053831-71594a27632d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"A rose for mommy!"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-8' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"You gunna finish that?"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-9' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"We can't afford a cat!"</p>
+            </div>
+            <div>
+              <img class='grid-item grid-item-10' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1504595403659-9088ce801e29?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
+              <p>"Dis my fren!"</p>
+            </div>
           </div>
+        </div>
+
+
 
 
   </div> <!-- /portfolio-content -->
