--- a/scrapbook.html
+++ b/scrapbook.html
@@ -127,37 +127,62 @@
 
             </div>
             <div>
-              <img class='grid-item grid-item-3' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1510771463146-e89e6e86560e?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"I love you so much!"</p>
+              <img class='grid-item grid-item-3' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_ebuka.jpg' alt=''>
+
             </div>
             <div>
               <img class='grid-item grid-item-4' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Self_portrait.jpg' alt=''>
-              <p>"I'm the baby of the house!"</p>
+
             </div>
             <div>
-              <img class='grid-item grid-item-5' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1530281700549-e82e7bf110d6?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"Are you gunna throw the ball?"</p>
+              <img class='grid-item grid-item-5' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/coke_can_concept.png' alt=''>
+
             </div>
             <div>
-              <img class='grid-item grid-item-6' src='https://images.unsplash.com/photo-1548199973-03cce0bbc87b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"C'mon friend!"</p>
+              <img class='grid-item grid-item-6' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Kit_kat.png' alt=''>
+
             </div>
             <div>
-              <img class='grid-item grid-item-7' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1552053831-71594a27632d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"A rose for mommy!"</p>
+              <img class='grid-item grid-item-7' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/The_futur_pop_art_challenge_mandalorian.jpg' alt=''>
+
             </div>
             <div>
-              <img class='grid-item grid-item-8' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"You gunna finish that?"</p>
+              <img class='grid-item grid-item-8' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/humantone.png' alt=''>
+
             </div>
             <div>
-              <img class='grid-item grid-item-9' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1535930891776-0c2dfb7fda1a?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"We can't afford a cat!"</p>
+              <img class='grid-item grid-item-9' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/quaker oats app.png' alt=''>
+
             </div>
             <div>
-              <img class='grid-item grid-item-10' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='https://images.unsplash.com/photo-1504595403659-9088ce801e29?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ' alt=''>
-              <p>"Dis my fren!"</p>
+              <img class='grid-item grid-item-10' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/time.png' alt=''>
+
             </div>
+            <div>
+              <img class='grid-item grid-item-11' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hustle hard.png' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-12' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hero.png' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-13' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/cap.png' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-14' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_Joe-boy.jpg' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-15' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/air peace.png' alt=''>
+
+            </div>
+          </div>
+
+
+
+
           </div>
         </div>
 
