--- a/scrapbook.html
+++ b/scrapbook.html
@@ -111,7 +111,9 @@
             <div class="col-full">
                 <h1>SCRAPBOOK</h1>
 
-                <p>The "Scrapbook" is a collection of Dumebi Iwuchukwu's personal work and experiments. These are either snippets from larger projects, photography or simply just experiments from the past 8 years. © Dumebi Iwuchukwu</p>
+
+                 <p>My conscious appreciation of design and art started at the age of eight when my Mom gave me the gift of a scrapbook, It's wide empty pages fuelled my imagination with possibilites and I started a collage of beautiful ads and comics from my Dad's old magazines and newspapers. I could say that's how my journey as a designer began.</p>
+                  <p>This Scrapbook is different from that of my childhood in the sense that these are either snippets from large projects I worked on, my photography or simply just experiments from the past 8 years.</p>
             </div>
         </div>
         <div class="row portfolio-content">
@@ -176,6 +178,10 @@
             </div>
             <div>
               <img class='grid-item grid-item-15' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/air peace.png' alt=''>
+
+            </div>
+            <div>
+              <img class='grid-item grid-item-16' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/dumebi_office.png' alt=''>
 
             </div>
           </div>
