--- a/scrapbook.html
+++ b/scrapbook.html
@@ -121,67 +121,67 @@
           <div class="grid-container">
 
             <div class="card">
-              <img class='grid-item grid-item-1' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/dangote-flour-knead-image-independence-day-nigeria.jpg' alt=''>
+              <img class='grid-item grid-item-1 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/dangote-flour-knead-image-independence-day-nigeria.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-2' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/Skatedeck_challenge.jpg' alt=''>
+              <img class='grid-item grid-item-2 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/portfolio/gallery/Skatedeck_challenge.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-3' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_ebuka.jpg' alt=''>
+              <img class='grid-item grid-item-3 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_ebuka.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-4' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Self_portrait.jpg' alt=''>
+              <img class='grid-item grid-item-4 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Self_portrait.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-5' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/coke_can_concept.png' alt=''>
+              <img class='grid-item grid-item-5 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/coke_can_concept.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-6' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Kit_kat.png' alt=''>
+              <img class='grid-item grid-item-6 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Kit_kat.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-7' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/The_futur_pop_art_challenge_mandalorian.jpg' alt=''>
+              <img class='grid-item grid-item-7 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/The_futur_pop_art_challenge_mandalorian.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-8' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/humantone.png' alt=''>
+              <img class='grid-item grid-item-8 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/humantone.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-9' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/quaker oats app.png' alt=''>
+              <img class='grid-item grid-item-9 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/quaker oats app.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-10' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/time.png' alt=''>
+              <img class='grid-item grid-item-10 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/time.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-11' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hustle hard.png' alt=''>
+              <img class='grid-item grid-item-11 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hustle hard.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-12' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hero.png' alt=''>
+              <img class='grid-item grid-item-12 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/hero.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-13' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/cap.png' alt=''>
+              <img class='grid-item grid-item-13 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/cap.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-14' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_Joe-boy.jpg' alt=''>
+              <img class='grid-item grid-item-14 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/Budweiser_Joe-boy.jpg' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-15' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/air peace.png' alt=''>
+              <img class='grid-item grid-item-15 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/air peace.png' alt=''>
 
             </div>
             <div>
-              <img class='grid-item grid-item-16' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/dumebi_office.png' alt=''>
+              <img class='grid-item grid-item-16 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/dumebi_office.png' alt=''>
 
             </div>
           </div>
