--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap">
+               <img src="images\portfolio\gallery\Budweiser.jpg" alt="Budweiser bottle with floating cap" class="lazyload">
                  <a href="#modal-04" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -225,7 +225,7 @@
 
            <div class="bgrid folio-item">
               <div class="item-wrap">
-               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay">
+               <img src="images\portfolio\gallery\Nivea.jpg" alt="Nivea men flatlay" class="lazyload">
                  <a href="#modal-06" class="overlay">
                     <div class="folio-item-table">
                      <div class="folio-item-cell">
@@ -260,7 +260,7 @@
 
              <div class="bgrid folio-item">
                 <div class="item-wrap">
-                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad">
+                 <img src="images\portfolio\gallery\Schweppes.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
                    <a href="#modal-03" class="overlay">
                       <div class="folio-item-table">
                        <div class="folio-item-cell">
@@ -295,7 +295,7 @@
 
             <div class="bgrid folio-item">
                <div class="item-wrap">
-                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad">
+                <img src="images\portfolio\gallery\selfie.jpg"alt="Dangote Pasta Pack ad" class="lazyload">
                   <a href="#modal-03" class="overlay">
                      <div class="folio-item-table">
                       <div class="folio-item-cell">
