--- a/404.html
+++ b/404.html
@@ -48,15 +48,16 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images\logo-black.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="index.html#about" title="about">About</a></li>
-                <li><a href="index.html#works" title="works">Works</a></li>
-                <li><a href="index.html#contact" title="contact">Contact</a></li>
+              <li><a href="index.html#home" title="home">Home</a></li>
+              <li><a href="index.html#about" title="about">About</a></li>
+              <li><a href="index.html#portfolio" title="works">Works</a></li>
+              <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
+              <li><a href="index.html#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
 
