--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -75,7 +75,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.svg" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo-black.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -83,7 +83,8 @@
               <ul class="header-nav">
                 <li><a href="index.html#home" title="home">Home</a></li>
                 <li><a href="index.html#about" title="about">About</a></li>
-                <li><a href="index.html#works" title="works">Works</a></li>
+                <li><a href="index.html#portfolio" title="works">Works</a></li>
+                <li><a href="scrapbook.html"  title="works">Scrapbook</a></li>
                 <li><a href="index.html#contact" title="contact">Contact</a></li>
               </ul>
             </ul>
@@ -165,7 +166,7 @@
                 <div class="col-full">
 
                     <div class="footer-logo">
-                        <a class="footer-site-logo" href="#0"><img src="images/logo.svg" alt="Homepage"></a>
+                        <a class="footer-site-logo" href="#0"><img src="images/logo-black.png" alt="Homepage"></a>
                     </div>
 
                     <ul class="footer-social">
