--- a/scrapbook.html
+++ b/scrapbook.html
@@ -58,6 +58,11 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
+    <!-- Cookie consent
+    ================================================== -->
+
+    <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css"/><script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script><script>window.addEventListener("load", function(){window.wpcc.init({"colors":{"popup":{"background":"#000000","text":"#ffffff","border":"#ffffff"},"button":{"background":"#ffffff","text":"#000000"}},"position":"bottom","border":"normal","corners":"normal","transparency":"5","content":{"href":"https://www.dum3bi.com/cookie-policy"}})});</script>
+
 </head>
 
 
@@ -286,6 +291,7 @@
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="js/lazysizes.min.js" async></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133301768-1"></script>
