--- a/scrapbook.html
+++ b/scrapbook.html
@@ -162,7 +162,7 @@
 
             </div>
             <div>
-              <img class='grid-item grid-item-10 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/time.png' alt=''>
+              <img class='grid-item grid-item-10 lazyload' style= "box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);" src='images/time.jpf' alt=''>
 
             </div>
             <div>
